@@ -365,6 +365,10 @@ releases of winkarst have broken .KST export/import...
 <li>resolve documentation/examples mismatch for station based XYZ files and
 implement reading of legs from them.
 
+<li>LR ticks on printouts not clearly associated with stations - draw l/r splays faintly?
+
+<li>Button in aven for extended elevation (ask for .spec file?)
+
 </ul>
 
 </BODY></HTML>
